--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	  
 	  <h2>DSGE Modeling App</h2>
 
-	  <p>Use this application to run deterministic simulations of some of the DSGE models developed in the Research Department at the International Monetary Fund. You can calibrate each model to a certain country (or group of countries) and use country-specific paths for exogenous variables.</p> 
+	  <p>Use THIS application to run deterministic simulations of some of the DSGE models developed in the Research Department at the International Monetary Fund. You can calibrate each model to a certain country (or group of countries) and use country-specific paths for exogenous variables.</p> 
 	  
 	  <div class="row">
 	    <div class="col-md-9">
