--- a/public/ca.html
+++ b/public/ca.html
@@ -134,7 +134,7 @@
 	  </div>
 
 	  <div class="content" id="params" style="display:none">
-	    <h2>Parameters</h2>
+	    <h2>Parameters222</h2>
 	    <div id="inst-param"></div>
 	    <hr>
 	    <div class="row">
