--- a/public/ca.html
+++ b/public/ca.html
@@ -79,7 +79,7 @@
 	<div class="col-md-2 sidebar">
 	  <ul class="nav nav-sidebar">
             <li class="active" id="link-instructions"><a href="#instructions">Instructions</a></li>
-            <li id="link-params"><a href="#params">Parameters</a></li>
+            <li id="link-params"><a href="#params">Parameters2222</a></li>
 	    <li id="link-params"><a href="#init">Initial Conditions</a></li>
 	    <li id="link-shocks"><a href="#shocks">Shocks</a></li>
             <li id="link-results"><a href="#results">Results</a></li>
