--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     
-    <title>IMF DSGE Modeling App</title>
+    <title>IMF Macro Analysis for LICs App</title>
     
     <!-- jquery -->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -22,7 +22,7 @@
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">DSGE Modeling App</a>
+          <a class="navbar-brand" href="/">Macroeconomic Analysis for LICs App</a>
         </div>
 	<ul class="nav navbar-nav navbar-right">
           <li><a id="about-btn">About</a></li>
@@ -74,9 +74,9 @@
 	</div>
 	<div class="col-md-8">
 	  
-	  <h2>DSGE Modeling App</h2>
+	  <h2>Macroeconomic Analysis for LICs App</h2>
 
-	  <p>Use THIS application to run deterministic simulations of some of the DSGE models developed in the Research Department at the International Monetary Fund. You can calibrate each model to a certain country (or group of countries) and use country-specific paths for exogenous variables.</p> 
+	  <p>Use this application to run deterministic simulations of some of the DSGE models developed in the Research Department in collaboration with the Strategy, Policy, and Review Department at the International Monetary Fund. You can calibrate each model to a certain country (or group of countries) and use country-specific paths for exogenous variables.</p> 
 	  
 	  <div class="row">
 	    <div class="col-md-9">
