--- a/public/dsf.html
+++ b/public/dsf.html
@@ -27,7 +27,7 @@
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">DSGE Modeling App</a>
+          <a class="navbar-brand" href="/">Macroeconomic Analysis for LICs App</a>
         </div>
 	<ul class="nav navbar-nav navbar-right">
           <li><a id="about-btn">About</a></li>
