No CA for presentation

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 	  <h2>Macroeconomic Analysis for LICs App</h2>
 
 	  <p>Use this application to run deterministic simulations of some of the DSGE models developed in the Research Department in collaboration with the Strategy, Policy, and Review Department at the International Monetary Fund. You can calibrate each model to a certain country (or group of countries) and use country-specific paths for exogenous variables.</p> 
-	  
+
+	  <!-- comment out CA for presentation
 	  <div class="row">
 	    <div class="col-md-9">
 	      <h3>Current Account Norm Model</h3>
@@ -88,6 +89,7 @@
 		    href="ca.html">Run this model &raquo;</a></p>
 	    </div>
 	  </div>
+	  -->
 
 	  <div class="row">
 	    <div class="col-md-9">
